--- a/config.json
+++ b/config.json
@@ -4,19 +4,17 @@
       "name": "Studio Principal",
       "ip": "192.168.1.100",
       "port": 80,
+      "username": "admin",
+      "password": "votre_mot_de_passe",
       "type": "Merlin"
     },
     {
       "name": "Régie Technique",
       "ip": "192.168.1.101",
       "port": 80,
+      "username": "admin",
+      "password": "autre_mot_de_passe",
       "type": "Bridge-It"
-    },
-    {
-      "name": "Studio Mobile",
-      "ip": "192.168.1.102",
-      "port": 80,
-      "type": "Gateway"
     }
   ]
 }
