--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 {
   "machines": [
     {
-      "name": "Studio Principal",
-      "ip": "192.168.1.100",
-      "port": 80,
+      "name": "Studio A",
+      "ip": "82.127.52.49",
+      "port": 25010,
       "username": "admin",
-      "password": "votre_mot_de_passe",
-      "type": "Merlin"
+      "password": "tiebridgeFB45a",
+      "type": "Bridge-it"
     },
     {
       "name": "Régie Technique",
