--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
       "ip": "82.127.52.49",
       "port": 25010,
       "username": "admin",
-      "password": "tiebridgeFB45a",
+      "password": "",
       "type": "Bridge-it"
     },
     {
